--- a/Library.DTO/Library.DTO.csproj
+++ b/Library.DTO/Library.DTO.csproj
@@ -41,8 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="AuthorDTO.cs" />
+    <Compile Include="BookBorrowFeeDTO.cs" />
+    <Compile Include="BookDetailsDTO.cs" />
+    <Compile Include="BookRequestDTO.cs" />
+    <Compile Include="BooksDTO.cs" />
+    <Compile Include="BorrowedBooksDTO.cs" />
+    <Compile Include="CampusDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceTypesDTO.cs" />
+    <Compile Include="UserDTO.cs" />
+    <Compile Include="UserTypesDTO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Library.Core\Library.Core.csproj">
@@ -53,6 +62,9 @@
       <Project>{177ce4fc-3e3b-4287-a215-1b2ed48b634d}</Project>
       <Name>Library.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
