--- a/Library.Service/Library.Service.csproj
+++ b/Library.Service/Library.Service.csproj
@@ -51,9 +51,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthorsPanelService.cs" />
+    <Compile Include="BaseService.cs" />
+    <Compile Include="BooksPanelService.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="DefinitionService.cs" />
     <Compile Include="LibrarianService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserPanelService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Library.Core\Library.Core.csproj">
