--- a/Library.Admin/Library.WEBAdmin.csproj
+++ b/Library.Admin/Library.WEBAdmin.csproj
@@ -76,6 +76,9 @@
     <Reference Include="Owin, Version=1.0.0.0, Culture=neutral, PublicKeyToken=f0ebd12fd5e55cc5, processorArchitecture=MSIL">
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="Rotativa, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Rotativa.1.7.3\lib\net461\Rotativa.dll</HintPath>
+    </Reference>
     <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -1405,6 +1408,11 @@
     <Content Include="Content\scripts\userDataQuery.js" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="Rotativa\help-wkhtmltoimage.txt" />
+    <Content Include="Rotativa\help-wkhtmltopdf.txt" />
+    <Content Include="Rotativa\wkhtmltoimage.exe" />
+    <Content Include="Rotativa\wkhtmltopdf.exe" />
+    <Content Include="Scripts\bookRequestsPanelDataQuery.js" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -1465,6 +1473,7 @@
     <Content Include="Content\global\plugins\simple-line-icons\fonts\Simple-Line-Icons.woff" />
     <Content Include="Content\global\plugins\typeahead\LICENSE" />
     <Content Include="Content\global\plugins\typeahead\README.md" />
+    <Content Include="App_Browsers\qt.browser" />
     <None Include="Scripts\jquery-3.6.0.intellisense.js" />
     <Content Include="Scripts\jquery-3.6.0.js" />
     <Content Include="Scripts\jquery-3.6.0.min.js" />
@@ -1474,6 +1483,7 @@
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Scripts\ReportPanelDataQuery.js" />
     <Content Include="Scripts\userPanelDataQuery.js" />
     <Content Include="Scripts\vendorPanelDataQuery.js" />
     <Content Include="Web.config" />
@@ -1487,8 +1497,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BookRequestsPanelController.cs" />
     <Compile Include="Controllers\BooksPanelController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ReportsPanelController.cs" />
     <Compile Include="Controllers\UserPanelController.cs" />
     <Compile Include="Filters\LibrarianAuthorizeAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -1534,6 +1546,9 @@
     <Content Include="Views\UserPanel\Edit.cshtml" />
     <Content Include="Views\BooksPanel\Create.cshtml" />
     <Content Include="Views\BooksPanel\Edit.cshtml" />
+    <Content Include="Views\BookRequestsPanel\Index.cshtml" />
+    <Content Include="Views\ReportsPanel\Index.cshtml" />
+    <Content Include="Views\ReportsPanel\Report.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
