--- a/Library.Admin/packages.config
+++ b/Library.Admin/packages.config
@@ -19,5 +19,6 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net47" />
   <package id="NReco.PdfGenerator" version="1.2.0" targetFramework="net47" />
   <package id="Owin" version="1.0" targetFramework="net47" />
+  <package id="Rotativa" version="1.7.3" targetFramework="net47" />
   <package id="WebGrease" version="1.5.2" targetFramework="net47" />
 </packages>
