--- a/Library.Service/Library.Service.csproj
+++ b/Library.Service/Library.Service.csproj
@@ -61,6 +61,7 @@
     <Compile Include="LibrarianService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportPanelService.cs" />
+    <Compile Include="UserBorrowedBooksService.cs" />
     <Compile Include="UserPanelService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
