mail service eklendi

--- a/Library.Admin/Library.WEBAdmin.csproj
+++ b/Library.Admin/Library.WEBAdmin.csproj
@@ -1082,6 +1082,7 @@
     <Content Include="Content\scripts\userDataQuery.js" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="MailTemplate\WelcomeUser.html" />
     <Content Include="Rotativa\help-wkhtmltoimage.txt" />
     <Content Include="Rotativa\help-wkhtmltopdf.txt" />
     <Content Include="Rotativa\wkhtmltoimage.exe" />
