--- a/Library.Admin/Web.config
+++ b/Library.Admin/Web.config
@@ -16,6 +16,10 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="MailServer" value="smtp.gmail.com" />
+    <add key="MailUser" value="ahmetsalim873@gmail.com" />
+    <add key="MailPassword" value="asdf-1234" />
+    <add key="MailPort" value="587" />
     <add key="WebsiteUrl" value="  https://localhost:44388" />
   </appSettings>
   <system.web>
