--- a/Library.DTO/Library.DTO.csproj
+++ b/Library.DTO/Library.DTO.csproj
@@ -49,6 +49,7 @@
     <Compile Include="BorrowedBooksDTO.cs" />
     <Compile Include="BorrowedBooksMaxNumberDTO.cs" />
     <Compile Include="CampusDTO.cs" />
+    <Compile Include="EmailModel.cs" />
     <Compile Include="Enums.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceTypesDTO.cs" />
